...
  <string name="progress_database_full_dialog_title">Maximum storage capacity reached</string>
  <string name="progress_database_full_dialog_description">Saved progress for the lesson \"%s\" will be deleted.</string>
  <string name="progress_database_full_dialog_continue_button">Continue</string>
  <string name="progress_database_full_dialog_leave_without_saving_progress_button">Leave without saving progress</string>
  <string name="progress_database_full_dialog_back_to_lesson_button">Back to lesson</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
  <string name="topic_name_text_view">Ratios and Proportional Reasoning</string>
  <string name="topic_practice_skills_description">Select skills that you would like to practice.</string>
  <string name="topic_practice_start">Start</string>
  <string name="info_tab_content_description">Details about the topic.</string>
  <string name="revision_tab_content_description">Revise concepts learned from completed lessons here.</string>
  <string name="practice_tab_content_description">Practice the concepts learned from completed lessons.</string>
  <string name="lessons_tab_content_description">Tap here to start playing a lesson.</string>
...
  <string name="practice">Practice</string>
  <string name="study">Study</string>
  <string name="administrator_controls_title">Administrator Controls</string>
  <string name="topic_page">Topic page</string>
  <string name="topic_name">Topic: %s</string>
  <string name="topic">Topic</string>
  <string name="ongoing_topic_list_activity_title">Topics in Progress</string>
  <string name="topic_story_progress_percentage">%s\%%</string>
  <string name="topic_play_chapter_index">%s</string>
  <string name="chapter_name">Chapter %1$s: %2$s</string>
  <string name="chapter_completed">Chapter %1$s with title %2$s is completed</string>
  <string name="chapter_in_progress">Chapter %1$s with title %2$s is in progress</string>
  <string name="chapter_prerequisite_title_label">Complete Chapter %1$s: %2$s to unlock this chapter.</string>
...
  <string name="reading_text_size_small">Small</string>
  <string name="reading_text_size_medium">Medium</string>
  <string name="reading_text_size_large">Large</string>
  <string name="reading_text_size_extra_large">Extra Large</string>
  <string name="slide_seekbar_to_control_text_size">Slide seekbar to control the text size.</string>
  <string name="profile">Profile</string>
  <string name="story_count_text_view">2 Stories</string>
  <string name="topics_in_progress">Topics in Progress</string>
  <string name="topic_in_progress">Topic in Progress</string>
  <string name="stories_completed">Stories Completed</string>
  <string name="story_completed">Story Completed</string>
  <string name="options_activity_title">Options</string>
  <!-- CompletedStoryListActivity -->
...
